<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/riwayat_cardview"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/dateTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/tanggal" />

        <TextView
            android:id="@+id/titikdua_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            android:textSize="20sp"
            android:text="@string/date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/titikdua_5"/>

        <TextView
            android:id="@+id/timeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:text="@string/waktu" />

        <TextView
            android:id="@+id/titikdua_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="@+id/guideline2"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:textSize="20sp"
            android:text="@string/time"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toEndOf="@id/titikdua_5"/>

        <TextView
            android:id="@+id/glass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/glass"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/timeTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/metal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/metal"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/glass"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/paper"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/metal"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/plastic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/plastic"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/paper"
            app:layout_constraintStart_toStartOf="parent"/>
<!--            app:layout_constraintBottom_toBottomOf="parent"-->


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/titikdua_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=":"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/timeTextView"
            app:layout_constraintStart_toStartOf="@id/guideline"/>

        <TextView
            android:id="@+id/titikdua_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text=":"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/titikdua_1"
            app:layout_constraintStart_toStartOf="@id/guideline"/>

        <TextView
            android:id="@+id/titikdua_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text=":"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/titikdua_2"
            app:layout_constraintStart_toStartOf="@id/guideline"/>

        <TextView
            android:id="@+id/titikdua_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text=":"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/titikdua_3"
            app:layout_constraintStart_toStartOf="@id/guideline"/>

        <TextView
            android:id="@+id/glassNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/timeTextView"
            app:layout_constraintStart_toStartOf="@id/titikdua_1"
            tools:text="@string/angka"/>

        <TextView
            android:id="@+id/metalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/glassNumber"
            app:layout_constraintStart_toStartOf="@id/titikdua_2"
            tools:text="@string/angka"/>

        <TextView
            android:id="@+id/paperNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/metalNumber"
            app:layout_constraintStart_toStartOf="@id/titikdua_3"
            tools:text="@string/angka"/>

        <TextView
            android:id="@+id/plasticNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/paperNumber"
            app:layout_constraintStart_toStartOf="@id/titikdua_4"
            tools:text="@string/angka"
            />

        <TextView
            android:id="@+id/addedBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/added_balance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plastic"/>

        <TextView
            android:id="@+id/titikdua_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/plastic"
            android:textSize="12sp"
            android:text=":"/>

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintStart_toStartOf="@id/titikdua_7"
            app:layout_constraintTop_toBottomOf="@id/plastic"
            tools:text="@string/angka"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
